# code

./: .dockerignore  .gitignore  .scalafmt.conf  Dockerfile  README.md  build.sbt  docker-compose.yml  entrypoint.sh  kernel.json  pom.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  kafka.yml
.metals/: metals.lock.db  metals.mv.db
.metals/.reports/metals-full/2025-03-30/: r_empty-definition_13-28-44-737.md  r_empty-definition_13-28-44-768.md
notebooks/: py-spark-delta.ipynb  py-spark-kafka.ipynb  scala-spark-delta.ipynb  scala-spark-kafka.ipynb  scala-spark-udaf.ipynb  scala-spark.ipynb  scala.ipynb  spark-delta.ipynb  spark-kafka.ipynb  spark-udf-pandas.ipynb  spark.ipynb
src/: __init__.py
src/data_eng/: __init__.py
